--- a/SentimentTweet.ipynb
+++ b/SentimentTweet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentTweet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkOJuCDpQMxGVzBpy+S6xP",
+      "authorship_tag": "ABX9TyPPFDPnY1FtHoq4AARLihUF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "iu7scKZob5kM"
       },
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BmALuks5cvet",
-        "outputId": "cb6fcdd9-2cbc-4f69-d416-769273e9758b"
+        "outputId": "7bd850d9-7917-432e-e261-d42b9aca05ce"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "HaYEyzXGc06b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "fJRL8luqdhTK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "eCTXa5z7fcV5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "cO9N4LkIdwok"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,9 +120,9 @@
           "height": 206
         },
         "id": "RIzzzcQkePlF",
-        "outputId": "dda1e9dc-df3e-45e9-e6ab-ca32c2a08057"
+        "outputId": "a2c82430-4352-4003-c6ef-72a199498da6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +144,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9085ca8d-aea2-4c96-9496-756c056220c2\">\n",
+              "  <div id=\"df-902281e4-1115-4900-bc6c-5cf1d9c3fc8d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -221,7 +221,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9085ca8d-aea2-4c96-9496-756c056220c2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-902281e4-1115-4900-bc6c-5cf1d9c3fc8d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -272,12 +272,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9085ca8d-aea2-4c96-9496-756c056220c2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-902281e4-1115-4900-bc6c-5cf1d9c3fc8d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9085ca8d-aea2-4c96-9496-756c056220c2');\n",
+              "          const element = document.querySelector('#df-902281e4-1115-4900-bc6c-5cf1d9c3fc8d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -332,7 +332,7 @@
       "metadata": {
         "id": "LNuaa_J0evao"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,8 +343,39 @@
       "metadata": {
         "id": "t17MW-MGsMcq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tweet['target'].head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QuR_vCfZ5962",
+        "outputId": "04b14b25-1f48-4245-be3b-259c24bc8ba4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    NEGATIVE\n",
+              "1    NEGATIVE\n",
+              "2    NEGATIVE\n",
+              "3    NEGATIVE\n",
+              "4    NEGATIVE\n",
+              "Name: target, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -369,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PTcdHGcLsjJD",
-        "outputId": "5ce35226-9f73-4891-f571-00be930c2fa4"
+        "outputId": "dc27c348-f586-4c74-8058-52d146eba2cf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +424,7 @@
       "metadata": {
         "id": "6MiPokTZt48Z"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,7 +435,7 @@
       "metadata": {
         "id": "RCqUchG7uKld"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +446,7 @@
       "metadata": {
         "id": "uKfQVcuqvneY"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,9 +459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fXLt54UxvvkE",
-        "outputId": "60f25e0a-44ee-4aee-b708-d55f93220658"
+        "outputId": "799079c6-ec25-444f-82d9-5394e1f32e43"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 15
         }
       ]
     },
@@ -468,7 +499,7 @@
       "metadata": {
         "id": "oXAp0hN_s_LB"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +515,7 @@
         "id": "VAKGnbIJu8U9",
         "outputId": "c05006d7-275d-406f-a095-80f5074763d7"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -509,7 +540,7 @@
       "metadata": {
         "id": "_rEHpbE-tlcT"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,9 +553,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5XBvThfkuRUH",
-        "outputId": "99bd2cae-c095-4acc-e6a0-ccc6270a8f01"
+        "outputId": "c60ad6fc-ed81-4de3-da82-50a93daded6a"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -539,7 +570,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 18
         }
       ]
     },
@@ -562,15 +593,13 @@
       "metadata": {
         "id": "gI4zDD_mzTMG"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "vocab_size = 1000\n",
-        "embedding_dim = 16\n",
-        "max_length = 120\n",
+        "embedding_dim = 32\n",
         "trunc_type = 'post'\n",
         "padding_type = 'post'\n",
         "oov_tok = \"<OOV>\"\n",
@@ -579,7 +608,7 @@
       "metadata": {
         "id": "dNorTa0mx86U"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -591,7 +620,68 @@
       "metadata": {
         "id": "MfC2HUo0zMPC"
       },
-      "execution_count": 43,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = Tokenizer()\n",
+        "tokenizer.fit_on_texts(sentences)\n",
+        "total_words = len(tokenizer.word_index) + 1\n",
+        "print(total_words)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KuvvYC1vDnka",
+        "outputId": "478c0224-afa3-4fd6-9ffc-90f811a30a35"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "261312\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_sequence_len = max([len(x) for x in sentences])\n",
+        "print(max_sequence_len)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GxvYWxM7FIoU",
+        "outputId": "e0b1b75e-9e43-4680-c3fd-00403a5124c8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "189\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.layers import Embedding, LSTM, Dense, Bidirectional"
+      ],
+      "metadata": {
+        "id": "Yf4_6QNREdmF"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,64 +692,118 @@
       "metadata": {
         "id": "asvXl6dAyOrL"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_tok)\n",
+        "print('Number of Training sentences = ',len(training_sentences))\n",
+        "print('Number of Testing sentences = ',len(testing_sentences))\n",
+        "print('Number of Training labels = ',len(training_labels))\n",
+        "print('Number of Testing labels = ',len(testing_labels))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tBPxVEIC8msP",
+        "outputId": "34241d65-cb99-4e2d-cf4e-f36072bc2205"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of Training sentences =  1280000\n",
+            "Number of Testing sentences =  320000\n",
+            "Number of Training labels =  1280000\n",
+            "Number of Testing labels =  320000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer = Tokenizer(num_words=total_words, oov_token=oov_tok)\n",
         "tokenizer.fit_on_texts(training_sentences)\n",
         "word_index = tokenizer.word_index"
       ],
       "metadata": {
         "id": "C6tfjGaKzVT6"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "training_sequences = tokenizer.texts_to_sequences(training_sentences)\n",
-        "training_padded = pad_sequences(training_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)\n",
+        "training_padded = pad_sequences(training_sequences, maxlen=max_sequence_len, padding=padding_type, truncating=trunc_type)\n",
         "\n",
         "testing_sequences = tokenizer.texts_to_sequences(testing_sentences)\n",
-        "testing_padded = pad_sequences(testing_sequences, maxlen=max_length, padding=padding_type, truncating=trunc_type)"
+        "testing_padded = pad_sequences(testing_sequences, maxlen=max_sequence_len, padding=padding_type, truncating=trunc_type)"
       ],
       "metadata": {
         "id": "vD8tLno40Y3L"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "label_tokenizer = Tokenizer()\n",
-        "label_tokenizer.fit_on_texts(labels)\n",
-        "train_label_seq = label_tokenizer.texts_to_sequences(training_labels)\n",
-        "train_label_seq_np = np.array(train_label_seq) - 1"
+        "label_tokenizer.fit_on_texts(labels)"
       ],
       "metadata": {
         "id": "58frrny50cVu"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "label_tokenizer = Tokenizer()\n",
-        "label_tokenizer.fit_on_texts(labels)\n",
+        "train_label_seq = label_tokenizer.texts_to_sequences(training_labels)\n",
+        "train_label_seq_np = np.array(train_label_seq) - 1\n",
+        "\n",
         "test_label_seq = label_tokenizer.texts_to_sequences(testing_labels)\n",
         "test_label_seq_np = np.array(test_label_seq) - 1"
       ],
       "metadata": {
         "id": "Bku3bmjV0rkV"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "training_labels.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qA5tXy7E-R0F",
+        "outputId": "4535d410-c5c3-4d79-d42d-222bae523529"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1280000,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -667,16 +811,16 @@
         "model = tf.keras.Sequential([\n",
         "        # YOUR CODE HERE.\n",
         "        # YOUR CODE HERE. DO not change the last layer or test may fail\n",
-        "        tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length),\n",
-        "        tf.keras.layers.GlobalAveragePooling1D(),\n",
-        "        tf.keras.layers.Dense(24, activation='relu'),\n",
-        "        tf.keras.layers.Dense(6, activation='softmax')\n",
+        "        tf.keras.layers.Embedding(total_words, embedding_dim, input_length=max_sequence_len),\n",
+        "        tf.keras.layers.Dropout(0.3),\n",
+        "        Bidirectional(LSTM(150)),\n",
+        "        tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "    ])"
       ],
       "metadata": {
         "id": "GC9yHL9p07xU"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -689,30 +833,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-GhU4p-1E5B",
-        "outputId": "56056ad5-8265-47fc-fb66-9caba57df33c"
+        "outputId": "1638e93e-a6f3-4ee6-bc8c-9c746bf64b87"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " embedding_1 (Embedding)     (None, 120, 16)           16000     \n",
+            " embedding (Embedding)       (None, 189, 32)           8361984   \n",
             "                                                                 \n",
-            " global_average_pooling1d_1   (None, 16)               0         \n",
-            " (GlobalAveragePooling1D)                                        \n",
+            " dropout (Dropout)           (None, 189, 32)           0         \n",
             "                                                                 \n",
-            " dense_2 (Dense)             (None, 24)                408       \n",
+            " bidirectional (Bidirectiona  (None, 300)              219600    \n",
+            " l)                                                              \n",
             "                                                                 \n",
-            " dense_3 (Dense)             (None, 6)                 150       \n",
+            " dense (Dense)               (None, 1)                 301       \n",
             "                                                                 \n",
             "=================================================================\n",
-            "Total params: 16,558\n",
-            "Trainable params: 16,558\n",
+            "Total params: 8,581,885\n",
+            "Trainable params: 8,581,885\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ]
@@ -722,14 +866,14 @@
     {
       "cell_type": "code",
       "source": [
-        "model.compile(loss='sparse_categorical_crossentropy',\n",
+        "model.compile(loss='binary_crossentropy',\n",
         "              optimizer='adam',\n",
         "              metrics=['accuracy'])"
       ],
       "metadata": {
         "id": "UVEO5UFQ1Gsv"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +886,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W4_a9O4f1Kt6",
-        "outputId": "3753b364-382e-4a6a-f137-8933232e1652"
+        "outputId": "a073870d-8814-4676-9b0d-8ea669ca131c"
       },
       "execution_count": null,
       "outputs": [
@@ -751,13 +895,11 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "40000/40000 [==============================] - 166s 4ms/step - loss: 0.5169 - accuracy: 0.7414 - val_loss: 0.6098 - val_accuracy: 0.7038\n",
+            "40000/40000 [==============================] - 1049s 26ms/step - loss: 0.4471 - accuracy: 0.7885 - val_loss: 0.5977 - val_accuracy: 0.6908\n",
             "Epoch 2/10\n",
-            "40000/40000 [==============================] - 158s 4ms/step - loss: 0.4911 - accuracy: 0.7541 - val_loss: 0.7817 - val_accuracy: 0.5355\n",
+            "40000/40000 [==============================] - 1019s 25ms/step - loss: 0.4092 - accuracy: 0.8135 - val_loss: 0.6426 - val_accuracy: 0.6693\n",
             "Epoch 3/10\n",
-            "40000/40000 [==============================] - 156s 4ms/step - loss: 0.4872 - accuracy: 0.7557 - val_loss: 0.7792 - val_accuracy: 0.5312\n",
-            "Epoch 4/10\n",
-            "39996/40000 [============================>.] - ETA: 0s - loss: 0.4850 - accuracy: 0.7568"
+            "  617/40000 [..............................] - ETA: 15:30 - loss: 0.3802 - accuracy: 0.8327"
           ]
         }
       ]
